# fh-muenster-webserver-c-praktikum

./: CMakeLists.txt  doxygen.conf  readme.md
doc/: annotated.html  auth_8h.html  auth_8h_source.html  base64_8h.html  base64_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  echo__server_8h.html  echo__server_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  header_8h.html  header_8h_source.html  header__fields_8h.html  header__fields_8h_source.html  index.html  menudata.js  mime_8h.html  mime_8h_source.html  mime__types_8h.html  mime__types_8h_source.html  poison_8h.html  poison_8h_source.html  request_8h.html  request_8h_source.html  request__struct_8h.html  request__struct_8h_source.html  response_8h.html  response_8h_source.html  response__status__code_8h.html  response__status__code_8h_source.html  response__struct_8h.html  response__struct_8h_source.html  (+13 more)
error_pages/: 400.html  401.html  403.html  404.html  500.html  501.html  502.html  503.html  general.html
presentation/: Gruppe 10.pptx
src/: auth.c  auth.h  base64.c  base64.h  echo_server.c  echo_server.h  header.c  header.h  header_fields.h  mime.c  mime.h  mime_types.h  poison.h  request.c  request.h  request_struct.h  response.c  response.h  response_status_code.h  response_struct.h  tables.c  tables.h  utils.c  utils.h
test/: test_100M_body.sh  test_100M_uri.sh  test_basic_auth.sh  test_basic_auth_garbage.sh  test_download_100M.sh  test_download_4G.sh  (+2 more)
(+57 files in other folders)
